--- a/EXAM 4/index.html
+++ b/EXAM 4/index.html
@@ -273,7 +273,7 @@
       }
       .fa-magnifying-glass{
         margin-top: 1.2%;
-        margin-right: 1.2%;          
+        /* margin-right: 1.2%;           */
       }
 
       .navbar-default .nav li a {
