--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
         <li>
             <a href="./EXAM 4/index.html">Exam-4</a>
         </li>
+        <li>
+            <a href="./Bootstap_Zoo_Project/index.html">Exam-5</a>
+        </li>
     </ul>
 </body>
 </html>
