--- a/HTML,CSS,BOOTSRTAP/index.html
+++ b/HTML,CSS,BOOTSRTAP/index.html
@@ -39,31 +39,31 @@
 <body>
     <ul class="b1">
         <li>
-            <a href="/css text/index.html">css text</a>
+            <a href="./css text/index.html">css text</a>
         </li>    
         <li>    
-            <a href="/christmas/Santa.html">christmas</a>
+            <a href="./christmas/Santa.html">christmas</a>
         </li>
         <li>
-            <a href="/background/index.html">background</a>
+            <a href="./background/index.html">background</a>
         </li> 
         <li>
-            <a href="/box model 1/index.html">box model 1</a>
+            <a href="./box model 1/index.html">box model 1</a>
         </li>
         <li>
-            <a href="/box model 2/BOX.html">box model 2</a>
+            <a href="./box model 2/BOX.html">box model 2</a>
         </li>
         <li>
-            <a href="/box model 3/index.html">box model 3</a>
+            <a href="./box model 3/index.html">box model 3</a>
         </li>
         <li>
-            <a href="/box model 4/index.html">box model 4</a>
+            <a href="./box model 4/index.html">box model 4</a>
         </li>
         <li>
-            <a href="/transform/index.html">transform</a>
+            <a href="./transform/index.html">transform</a>
         </li>
         <li>
-            <a href="/PR 1/index.html"> PR - 1</a>
+            <a href="./PR 1/index.html"> PR - 1</a>
         </li>
         <li>
             <a href="./Exam/index.html"> Exam</a>
