--- a/JAVASCRIPT/DAY-3/Q1-Find your friend.html
+++ b/JAVASCRIPT/DAY-3/Q1-Find your friend.html
@@ -86,10 +86,10 @@
     <div class="container">
       <h1>Age Calculator</h1>
       <div class="form">
-        <label for="birthday" id="birthday">Enter your date of birth:</label>
+        <label for="birthday" id="birthday">Enter your Friend date of birth:</label>
         <input type="date" name="birthday" id="birthdayInput" />
         <button id="btn">Calculate Age</button>
-        <p id="result">Find your age</p>
+        <p id="result">Find your Friend age</p>
         <p id="age"></p>
       </div>
     </div>
