--- a/JAVASCRIPT/DAY-7/Find Product (multiplication)/index.html
+++ b/JAVASCRIPT/DAY-7/Find Product (multiplication)/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./Find Product (multiplication)Q-1.js">
 
-    <style>
-        #m{
-           height: 30px;
-           width: 110px;
-           size: 30px;
-        }
-    </style>
-</head>
-<body>
-    <input id="m" type="number" placeholder="number">
-    <input id="m" type="number" placeholder="number">
-    <input id="m" type="number" placeholder="number">
-    <input id="m" type="number" placeholder="number">
-    <input id="m" type="number" placeholder="number">
-    
-    <button id="m">Multipication</button>
-</body>
+  </head>
+  <body>
+    <input type="number" id="n1" style="margin: 2%" placeholder="Enter Number" /> 
+    <input type="number" id="n2" style="margin: 2%" placeholder="Enter Number"/> 
+    <input type="number" id="n3" style="margin: 2%" placeholder="Enter Number"/> 
+    <input type="number" id="n4" style="margin: 2%" placeholder="Enter Number"/> 
+    <input type="number" id="n5" style="margin: 2%" placeholder="Enter Number"/> <br /><br /><br />
+    <button onclick="getResult()" style="margin-left: 30%" id="sub">Submit</button> <br />
+    <h1 id="result" style="margin: 2%"></h1>
+  </body>
+  <script src="./Find Product (multiplication)Q-1.js"></script>
 </html>
