--- a/HTML,CSS,BOOTSRTAP/B/index.html
+++ b/HTML,CSS,BOOTSRTAP/B/index.html
@@ -8,7 +8,7 @@
 
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="/B/assets/css/styles.css">
+        <link rel="stylesheet" href="./assets/css/styles.css">
 
         <title>Responsive landing page headphones</title>
     </head>
