--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
         <li>
             <a href="./JAVASCRIPT/DAY-3/Q1-Find your friend.html">Find Your Friend</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/DAY-16/Products/index.html">Products</a>
+        </li>
     </ul>
 </body>
 </html>
