--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
         <li>
             <a href="./JAVASCRIPT/DAY-16/Products/index.html">Products</a>
         </li>
+         <li>
+            <a href="./js-test/index.html">Products</a>
+        </li>
     </ul>
 </body>
 </html>
