--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <a href="./JAVASCRIPT/DAY-16/Products/index.html">Products</a>
         </li>
          <li>
-            <a href="./js-test/index.html">Products</a>
+            <a href="./js-test/index.html">Hire a new Employee</a>
         </li>
     </ul>
 </body>
