--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
         <li>
             <a href="./CASINO/index.html">CASINO</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/Exam-paper/index.html">Quiz App</a>
+        </li>
     </ul>
 </body>
 </html>
