--- a/JAVASCRIPT/Exam-paper/index.html
+++ b/JAVASCRIPT/Exam-paper/index.html
@@ -3,17 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>question</title>
     <link rel="stylesheet" href="./style.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <h1 class="ep">Exam-Paper</h1>
 
+    <div class="quiz-container">
+        <div class="question" id="question1">Question 1: What is 2 + 2?</div>
+        <div class="option" data-question="question1" data-correct="true">A) 4</div>
+        <div class="option" data-question="question1" data-correct="false">B) 5</div>
+        <div class="option" data-question="question1" data-correct="false">C) 6</div>
+        <div class="option" data-question="question1" data-correct="false">D) 7</div>
 
+        <div class="question" id="question2">Question 2: What is the capital of France?</div>
+        <div class="option" data-question="question2" data-correct="true">A) Paris</div>
+        <div class="option" data-question="question2" data-correct="false">B) London</div>
+        <div class="option" data-question="question2" data-correct="false">C) Berlin</div>
+        <div class="option" data-question="question2" data-correct="false">D) Madrid</div>
+
+        <div class="question" id="question3">Question 3: What is the largest planet in our solar system?</div>
+        <div class="option" data-question="question3" data-correct="true">A) Jupiter</div>
+        <div class="option" data-question="question3" data-correct="false">B) Earth</div>
+        <div class="option" data-question="question3" data-correct="false">C) Mars</div>
+        <div class="option" data-question="question3" data-correct="false">D) Venus</div>
+
+        <div class="question" id="question4">Question 4: Which gas do plants absorb from the atmosphere?</div>
+        <div class="option" data-question="question4" data-correct="true">A) Carbon dioxide</div>
+        <div class="option" data-question="question4" data-correct="false">B) Oxygen</div>
+        <div class="option" data-question="question4" data-correct="false">C) Nitrogen</div>
+        <div class="option" data-question="question4" data-correct="false">D) Hydrogen</div>
+
+        <div class="question" id="question5">Question 5: What is the largest mammal in the world?</div>
+        <div class="option" data-question="question5" data-correct="true">A) Blue whale</div>
+        <div class="option" data-question="question5" data-correct="false">B) African elephant</div>
+        <div class="option" data-question="question5" data-correct="false">C) Giraffe</div>
+        <div class="option" data-question="question5" data-correct="false">D) Lion</div>
+    </div>
+
+<script src="./script.js" ></script>
 </body>
-
-    <script src="./style.css"></script>
-
-</html>
+</html> 
