--- a/JAVASCRIPT/Table/index.html
+++ b/JAVASCRIPT/Table/index.html
@@ -13,7 +13,7 @@
     <div class="center">
       
       <form id="form">
-      <h1>Enter Student Data</h1>
+      <h1 class="h1">Enter Student Data</h1>
       <input type="text"  placeholder="Name" class="name"  required>
       <input type="number"  class="Grid" placeholder="Grid" required>
       <input type="text"  class="course" placeholder="course" required>
