--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
         <li>
             <a href="./JAVASCRIPT/Exam-paper/index.html">Quiz App</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/Table/index.html">Table</a>
+        </li>
     </ul>
 </body>
 </html>
