--- a/JAVASCRIPT/Table/index.html
+++ b/JAVASCRIPT/Table/index.html
@@ -23,7 +23,7 @@
     </form>
   </div>
   <div class="center">
-    <table border="2px" cellspacing="5px" ; cellpadding="10px" ; class="t">
+    <table cellspacing="5px" ; cellpadding="10px" ; class="t">
       <thead>
         <tr>
           <th>Name</th>
