--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
         <li>
             <a href="./JAVASCRIPT/Table/index.html">Table</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/clock/index.html">Clock</a>
+        </li>
     </ul>
 </body>
 </html>
