--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
         <li>
             <a href="./JAVASCRIPT/clock/index.html">Clock</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/Create a dice/index.html">Dice</a>
+        </li>
     </ul>
 </body>
 </html>
