--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
         <li>
             <a href="./JAVASCRIPT/Create a dice/index.html">Dice</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/counter/index.html">Counter</a>
+        </li>
     </ul>
 </body>
 </html>
