--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
         <li>
             <a href="./JAVASCRIPT/counter/index.html">Counter</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/">BankAccount</a>
+        </li>
     </ul>
 </body>
 </html>
