--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <a href="./JAVASCRIPT/counter/index.html">Counter</a>
         </li>
         <li>
-            <a href="./JAVASCRIPT/">BankAccount</a>
+            <a href="./">BankAccount</a>
         </li>
     </ul>
 </body>
