--- a/JAVASCRIPT/Intagram Post/index.html
+++ b/JAVASCRIPT/Intagram Post/index.html
@@ -79,41 +79,43 @@
       </div>
       <div class="actionbtns">
         <div class="left">
-          <button type="button" class="btn btn-primary position-relative">
-            <ion-icon name="heart-outline"></ion-icon>
+          <button type="button" class="btn btn-primary position-relative"    id="Like"
+          countType="Like">
+            <ion-icon class="like" name="heart-outline"></ion-icon>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
             >
-              99+
+              0+
               <span class="visually-hidden">unread messages</span>
             </span>
           </button>
-          <button type="button" class="btn btn-primary position-relative">
-            <ion-icon name="chatbubble-outline"></ion-icon>
+          <button type="button" class="btn btn-primary position-relative"   id="Comment"
+          countType="Comment">
+            <ion-icon class="com" name="chatbubble-outline"></ion-icon>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
             >
-              99+
+              0+
               <span class="visually-hidden">unread messages</span>
             </span>
           </button>
-          <button type="button" class="btn btn-primary position-relative">
-            <ion-icon name="paper-plane-outline"></ion-icon>
+          <button type="button" class="btn btn-primary position-relative" id="Share" countType="Share">
+            <ion-icon class="share" name="paper-plane-outline"></ion-icon>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
             >
-              99+
+              0+
               <span class="visually-hidden">unread messages</span>
             </span>
           </button>
         </div>
         <div class="right">
-          <button type="button" class="btn btn-primary position-relative">
-            <ion-icon name="bookmark-outline"></ion-icon>
+          <button type="button" class="btn btn-primary position-relative" id="Save" countType="Save">
+            <ion-icon class="save" name="bookmark-outline"></ion-icon>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
             >
-              99+
+              0+
               <span class="visually-hidden">unread messages</span>
             </span>
           </button>
