--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
         <li>
             <a href="./JAVASCRIPT/BankAccount/index.html">BankAccount</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/Intagram Post/index.html">Intagram Post</a>
+        </li>
     </ul>
 </body>
 </html>
