--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
         <li>
             <a href="./JAVASCRIPT/Intagram Post/index.html">Intagram Post</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/Project-LocalStorage/index.html">Product Project-LocalStorage</a>
+        </li>
     </ul>
 </body>
 </html>
