--- a/JAVASCRIPT/all bootstrap/Pages/Login.html
+++ b/JAVASCRIPT/all bootstrap/Pages/Login.html
@@ -102,7 +102,7 @@
               Sign in
             </button>
           </div>
-          <img src="/Project-LocalStorage/image/register.svg" class="image" alt="" />
+          <img src="/JAVASCRIPT/all bootstrap/image/image-removebg-preview-2.png" class="image" alt="" />
         </div>
       </div>
     </div>
