--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
             <a href="./JAVASCRIPT/Intagram Post/index.html">Intagram Post</a>
         </li>
         <li>
-            <a href="./JAVASCRIPT/Project-LocalStorage/index.html">Product Project-LocalStorage</a>
+            <a href="./JAVASCRIPT/Project Local-Storage/index.html">Product Project-LocalStorage</a>
+        </li>
+        <li>
+            <a href="./JAVASCRIPT/Tourist /HTML/index.html">Tourist Exam</a>
         </li>
     </ul>
 </body>
