--- a/JAVASCRIPT/Tourist /HTML/index.html
+++ b/JAVASCRIPT/Tourist /HTML/index.html
@@ -75,10 +75,10 @@
               >
             </li>
             <li class="">
-              <a class="page-scroll" href="#team">Team</a>
+              <a class="page-scroll" href="../HTML/signup.html">SignUp</a>
             </li>
             <li class="">
-              <a class="page-scroll" href="#contact">Contact</a>
+              <a class="page-scroll" href="../HTML/login.html">Login</a>
             </li>
           </ul>
         </div>
