--- a/JAVASCRIPT/Tourist /HTML/login.html
+++ b/JAVASCRIPT/Tourist /HTML/login.html
@@ -94,10 +94,8 @@
           <div class="input">
             <h1>Tourist Data</h1>
             <form class="addp">
-             <h4 class="t">Title </h4><input class="in" id="Title" type="text" placeholder="Title" />
-             <h4 class="t">Image</h4> <input class="in" id="Image" type="url" placeholder="Image URL" />
-             <h4 class="t">Description</h4> <input class="in" id="Description" type="text" placeholder="Description " />
-             <h4 class="t">Price</h4> <input class="in" id="Price" type="number" placeholder="Price" />
+             <input class="in" id="Title" type="text" placeholder="UserName" />
+             <input class="in" id="password" type="password" placeholder="Description " />
              <h4 class="t">
 
              </h4> <input class="in" type="submit" />
