--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
             <a href="./CASINO/index.html">CASINO</a>
         </li>
         <li>
+            <a href="./JAVASCRIPT/Hire Employee/index.html">Hire Employee</a>
+        </li>
+        <li>
             <a href="./JAVASCRIPT/Exam-paper/index.html">Quiz App</a>
         </li>
         <li>
