--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
             <a href="./JAVASCRIPT/Hire Employee/index.html">Hire Employee</a>
         </li>
         <li>
+            <a href="./JAVASCRIPT/NEWS App/html/index.html">NEWS APP</a>
+        </li>
+        <li>
             <a href="./JAVASCRIPT/Exam-paper/index.html">Quiz App</a>
         </li>
         <li>
