--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="./HTML,CSS,BOOTSRTAP/Exam/index.html"> Exam</a>
         </li>
         <li>
-            <a href="./HTML,CSS,BOOTSRTAP/Live Project/index.html">Live Project</a>
+            <a href="./HTML,CSS,BOOTSRTAP/Live Project/index.html">Netflix</a>
         </li>
         <li>
             <a href="./HTML,CSS,BOOTSRTAP/Disney+ Hotstar/index.html">Disney+ Hotstar</a>
