--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
         <li>
             <a href="./JAVASCRIPT/Tourist /HTML/index.html">Tourist Exam</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/Music/index.html">Music App</a>
+        </li>
     </ul>
 </body>
 </html>
