--- a/JAVASCRIPT/Music/explorer.html
+++ b/JAVASCRIPT/Music/explorer.html
@@ -32,8 +32,8 @@
     <!-- --------------------------sidebar--------------------- -->
     <div class="sidebar" >
         <div class="shortcut-links">
-            <a href=""><img src="images/home.png" alt=""><p>Home</p></a>
-            <a href="./explorer.html"><img src="./images/explore.png" alt=""><p>Explore</p></a>
+            <a href="./index.html"><img src="images/home.png" alt=""><p>Home</p></a>
+            <a href=""><img src="images/explore.png" alt=""><p>Explore</p></a>
             <a href=""><img src="images/subscriprion.png" alt=""><p>Subcriptions</p></a>
             <a href=""><img src="images/library.png" alt=""><p>Library</p></a>
             <a href=""><img src="images/history.png" alt=""><p>History</p></a>
@@ -58,107 +58,6 @@
             <img src="images/banner2.jpg" alt="">
         </div>
 <!-- ------------------------ video------------------------ -->
-<div id="result">
-    
-
-        <div class="list_content">
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail1.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail2.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail3.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail4.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail5.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail6.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail7.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail7.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
     <div id="result">
@@ -261,8 +160,6 @@
         </div>
     </div>
 
-
-
-    <script src="./script.js"></script>
 </body>
+<script src="./script.js"></script>
 </html>
