--- a/JAVASCRIPT/Music/index.html
+++ b/JAVASCRIPT/Music/index.html
@@ -1,268 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube</title>
+    <title>Music Web</title>
+    <link
+    rel="shortcut icon"
+    href="https://yt3.googleusercontent.com/L2jLAyY4dSKb9z7iTypvWTXtFkoyZXSXUj-qzgENs71qLrOg1mnstwlAi_IJxhPJsgfbMZEnAQ=s900-c-k-c0x00ffffff-no-rj"
+    type="image/x-icon"
+  />
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    <nav class="flex-div">
-        <div class="nav-left flex-div">
-            <img src="images/menu.png" alt="" class="menu_icon">
-            <img src="images/youtube.png" alt="" class="logo">
-
-        </div>
-        <div class="nav-middle flex-div">
-            <div class="search_box flex-div">
-                <input type="text" id= "search_input" placeholder="Search">
-                <img src="images/search.png" alt="">
+    <div id="navbar">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
             </div>
-            <img src="images/voice-search.png" class="mic_icon" alt="">
+        </nav>
+    </div>
+    <div class="b">
+        <div class="innerTwo">
+            <div class="box">
+                <img class="bs" src="./vecteezy_audio-spectrum-animation_40275799.gif" alt="">
+                <img class="bs1"  src="https://i.ytimg.com/vi/RxlPPQPnbP0/sddefault.jpg" id="imageBig" class="img-fluid" alt="">
+            </div>
+
+            <div class="box" id="btt1">
+                <audio src="./songs/Matla Upar Matlu (Official Video) Devpagli, Jigar Thakor , New Gujarati Love Song 2021, HD Video.mp3"  id="btt" controls autoplay></audio>
+                <img class="bs2" src="./playing.gif" alt="">
+            </div>
         </div>
-        <div class="nav-right flex-div">
-            <img src="images/upload.png" alt="">
-            <img src="images/more.png" alt="">
-            <img src="images/notification.png" alt="">
-            <img src="images/Jack.png" alt="" class="user-icon" >
-        </div>
-    </nav>
-    <!-- --------------------------sidebar--------------------- -->
-    <div class="sidebar" >
-        <div class="shortcut-links">
-            <a href=""><img src="images/home.png" alt=""><p>Home</p></a>
-            <a href="./explorer.html"><img src="./images/explore.png" alt=""><p>Explore</p></a>
-            <a href=""><img src="images/subscriprion.png" alt=""><p>Subcriptions</p></a>
-            <a href=""><img src="images/library.png" alt=""><p>Library</p></a>
-            <a href=""><img src="images/history.png" alt=""><p>History</p></a>
-            <a href=""><img src="images/playlist.png" alt=""><p>Playlist</p></a>
-            <a href=""><img src="images/messages.png" alt=""><p>Messages</p></a>
-            <a href=""><img src="images/show-more.png" alt=""><p>Show-more</p></a>
-            <hr>
-        </div>
-        <div class="subcribed-list">
-            <h3>SUBSCRIBED</h3>
-            <a href=""><img src="images/Jack.png" alt=""><p>Jack Nicholson</p></a>
-            <a href=""><img src="images/simon.png" alt=""><p>Simon Baker</p></a>
-            <a href=""><img src="images/tom.png" alt=""><p>Tom Hardy</p></a>
-            <a href=""><img src="images/megan.png" alt=""><p>Megan</p></a>
-            <a href=""><img src="images/cameron.png" alt=""><p>Cameron</p></a>
+
+        <div class="bt scroll" id="songPlayer">
         </div>
     </div>
-    <!-- --------------------main---------------- -->
-
-    <div class="content">
-        <div class="banner">
-            <img src="images/banner2.jpg" alt="">
-        </div>
-<!-- ------------------------ video------------------------ -->
-<div id="result">
-    
-
-        <div class="list_content">
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail1.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail2.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail3.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail4.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail5.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail6.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail7.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail7.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-
-
-    <div id="result">
-        <div class="list_content">
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail1.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href="play-video.html"><img src="images/thumbnail2.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href=""><img src="images/thumbnail3.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href=""><img src="images/thumbnail4.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href=""><img src="images/thumbnail5.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href=""><img src="images/thumbnail6.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href=""><img src="images/thumbnail7.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="vid_list">
-                <a href=""><img src="images/thumbnail7.png" alt="" class="thumbnail"></a>                             
-                <div class="flex-div">
-                    <img src="images/Jack.png" alt="">
-                    <div class="vid-info">
-                        <a href="">I'm Durgesh Soni Currently working as freelancing.</a>
-                        <p>Durgesh Soni</p>
-                        <p>15k Views &bull; 2 days</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-    <script src="./script.js"></script>
 </body>
+<script src="./script.js"></script>
+
 </html>
