--- a/JAVASCRIPT/Music/index.html
+++ b/JAVASCRIPT/Music/index.html
@@ -48,17 +48,18 @@
     <div class="b">
         <div class="innerTwo">
             <div class="box">
-                <img class="bs" src="./vecteezy_audio-spectrum-animation_40275799.gif" alt="">
+                <img class="bs" src="./istockphoto-1127235507-640x640-removebg-preview.png" alt="">
                 <img class="bs1"  src="https://i.ytimg.com/vi/RxlPPQPnbP0/sddefault.jpg" id="imageBig" class="img-fluid" alt="">
             </div>
 
             <div class="box" id="btt1">
                 <audio src="./songs/Matla Upar Matlu (Official Video) Devpagli, Jigar Thakor , New Gujarati Love Song 2021, HD Video.mp3"  id="btt" controls autoplay></audio>
+                <img class="hedphone" src="https://img.freepik.com/free-photo/electric-guitar-beautiful-setting-still-life_23-2151423141.jpg" alt="">
                 <img class="bs2" src="./playing.gif" alt="">
             </div>
         </div>
 
-        <div class="bt scroll" id="songPlayer">
+        <div id="songPlayer">
         </div>
     </div>
     </div>
