--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
         <li>
             <a href="./JAVASCRIPT/Music/index.html">Music App</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/Final Project/index.html">Final Project</a>
+        </li>
     </ul>
 </body>
 </html>
