--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
         <li>
             <a href="./JAVASCRIPT/Final Project/index.html">Final Project</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/Youtube/index.html">Youtube</a>
+        </li>
     </ul>
 </body>
 </html>
