--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
         <li>
             <a href="./JAVASCRIPT/Youtube/index.html">Youtube</a>
         </li>
+        <li>
+            <a href="./JAVASCRIPT/from Exam/index.html">Form Excel</a>
+        </li>
     </ul>
 </body>
 </html>
