--- a/JAVASCRIPT/from Exam/index.html
+++ b/JAVASCRIPT/from Exam/index.html
@@ -11,7 +11,7 @@
       <div class="outer">
         <div class="details">
 
-          <form id="Employee_info name="submit-to-google-sheet">
+          <form id="Employee_info " name="submit-to-google-sheet">
             <label for="name">Name:</label>
             <input id="salary" name="Name" type="text" placeholder="Name" required />
             <label for="Number">Number:</label>
