--- a/JAVASCRIPT/NEWS App/html/index.html
+++ b/JAVASCRIPT/NEWS App/html/index.html
@@ -56,7 +56,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="/JAVASCRIPT/NEWS App/ css/style.css" />
+    <link rel="stylesheet" href="/NEWS App/ css/style.css" />
   </head>
 
   <body>
@@ -93,5 +93,5 @@
       </div>
     </div>
   </body>
-  <script src="/JAVASCRIPT/NEWS App/js/script.js"></script>
+  <script src="/NEWS App/js/script.js"></script>
 </html>
