--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <a href="./JAVASCRIPT/from Exam/index.html">Form Excel</a>
         </li>
         <li>
-            <a href="./JAVASCRIPT/Food Final Exam/index.html">Food Final Exam</a>
+            <a href="./JAVASCRIPT/Food Final Exam/FOOD App/html/index.html">Food Final Exam</a>
         </li>
     </ul>
 </body>
