--- a/JAVASCRIPT/Food Final Exam/FOOD App/html/Login.html
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/html/Login.html
@@ -11,7 +11,7 @@
     href="https://previews.123rf.com/images/yehorlisnyi/yehorlisnyi1803/yehorlisnyi180300047/97044093-fake-sport-news-heading-text-breaking-news-place-pin-false-broadcast-vector-illustration.jpg"
     type="image/x-icon">
    
-    <link rel="stylesheet" href="/JAVASCRIPT/NEWS App/ css/Login.css">
+    <link rel="stylesheet" href="/FOOD App/ css/Login.css">
    
 </head>
 
@@ -35,6 +35,6 @@
     </div>
 </body>
 
-<script src="/JAVASCRIPT/NEWS App/js/Login.js"></script>
+<script src="/FOOD App/js/Login.js"></script>
 
 </html>
