--- a/JAVASCRIPT/Food Final Exam/FOOD App/html/index.html
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/html/index.html
@@ -56,7 +56,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="/NEWS App/ css/style.css" />
+    <link rel="stylesheet" href="/FOOD App/ css/style.css" />
   </head>
 
   <body>
@@ -76,23 +76,23 @@
             <div class="pages">
               <select value="select" id="dropdown">
                 <option value="allover">All</option>
-                <option value="allover">Surat</option>
-                <option value="allover">Dilhi</option>
-                <option value="allover">America</option>
-                <option value="allover">UK</option>
-                <option value="allover">UAE</option>
+                <option>Surat</option>
+                <option>Ahamdabad</option>
+                <option>Mumbai</option>
+                <option>Delhi</option>
+                <option>Bangal</option>
               </select>
             </div>
-            <div><a href="./AddFood.html" class="pages">America</a></div>
-            <div><a href="./SignUp.html" class="pages">UAE</a></div>
-            <div><a href="./SignUp.html" class="pages">Germany</a></div>
-            <div><a href="./SignUp.html" class="pages">Japan</a></div>
-            <div><a href="./SignUp.html" class="pages">Canada</a></div>
+            <div><a href="./AddFood.html" class="pages">Surat</a></div>
+            <div><a href="./SignUp.html" class="pages">Ahamdabad</a></div>
+            <div><a href="./SignUp.html" class="pages">Mumbai</a></div>
+            <div><a href="./SignUp.html" class="pages">Delhi</a></div>
+            <div><a href="./SignUp.html" class="pages">Bangal</a></div>
           </div>
         </div>
         <div id="show_data"></div>
       </div>
     </div>
   </body>
-  <script src="/NEWS App/js/script.js"></script>
+  <script src="/FOOD App/js/script.js"></script>
 </html>
