--- a/JAVASCRIPT/Food Final Exam/FOOD App/html/AddFood.html
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/html/AddFood.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ADD NEWS</title>
+    <title>ADD FOOD</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="shortcut icon"
     href="https://previews.123rf.com/images/yehorlisnyi/yehorlisnyi1803/yehorlisnyi180300047/97044093-fake-sport-news-heading-text-breaking-news-place-pin-false-broadcast-vector-illustration.jpg"
     type="image/x-icon">
-    <link rel="stylesheet" href="/NEWS App/ css/AddFood.css">
+    <link rel="stylesheet" href="/FOOD App/ css/AddFood.css">
 </head>
 
 <body>
@@ -25,21 +25,22 @@
 
     <div id="main">
 
-        <form id="add_news">
-            <h1>Add News</h1>
+        <form id="add_Food">
+            <h1>Add Food</h1>
             <input type="text" id="title" placeholder="Title..." class="input" /><br><br>
-            <input type="text" id="description" placeholder="Descripton..." class="input" /><br><br>
+            <input type="number" id="Price" placeholder="Price..." class="input" /><br><br>
             <input type="url" id="img" placeholder="Url..." class="input" /><br><br>
-            <select id="country" class="input">
-                <option>India</option>
-                <option>America</option>
-                <option>China</option>
-                <option>Japan</option>
+            <select id="city" class="input">
+                <option>Surat</option>
+                <option>Ahamdabad</option>
+                <option>Mumbai</option>
+                <option>Delhi</option>
+                <option>Bangal</option>
             </select><br><br>
             <input type="submit" class="submit" />
         </form>
     </div>
 </body>
-<script src="/NEWS App/js/AddFood.js"></script>
+<script src="/FOOD App/js/AddFood.js"></script>
 
 </html>
