--- a/JAVASCRIPT/Food Final Exam/FOOD App/html/SignUp.html
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/html/SignUp.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon"
     href="https://previews.123rf.com/images/yehorlisnyi/yehorlisnyi1803/yehorlisnyi180300047/97044093-fake-sport-news-heading-text-breaking-news-place-pin-false-broadcast-vector-illustration.jpg"
     type="image/x-icon">
-    <link rel="stylesheet" href="/JAVASCRIPT/NEWS App/ css/SignUp.css">
+    <link rel="stylesheet" href="/FOOD App/ css/SignUp.css">
 </head>
 
 <body>
@@ -31,11 +31,12 @@
             <input type="text" id="name" placeholder="Enter Name" class="input" required /><br><br>
             <input type="email" id="email" placeholder="Enter Email" class="input" required /><br><br>
             <input type="url" id="img" placeholder="Enter Profile URL" class="input" required /><br><br>
-            <select id="country" class="input">
-                <option>India</option>
-                <option>America</option>
-                <option>China</option>
-                <option>Japan</option>
+            <select id="city" class="input">
+                <option>Surat</option>
+                <option>Ahamdabad</option>
+                <option>Mumbai</option>
+                <option>Delhi</option>
+                <option>Bangal</option>
             </select><br><br>
             <input type="password" id="password" placeholder="Enter Password" class="input" required /><br><br>
             <input type="submit" value="SignUp" class="submit" />
@@ -43,6 +44,6 @@
     </div>
 </body>
 
-<script src="/JAVASCRIPT/NEWS App/js/SignUp.js"></script>
+<script src="/FOOD App/js/SignUp.js"></script>
 
 </html>
