--- a/JAVASCRIPT/Food Final Exam/FOOD App/html/AddFood.html
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/html/AddFood.html
@@ -27,10 +27,10 @@
 
         <form id="add_Food">
             <h1>Add Food</h1>
-            <input type="text" id="title" placeholder="Title..." class="input" /><br><br>
-            <input type="number" id="Price" placeholder="Price..." class="input" /><br><br>
-            <input type="url" id="img" placeholder="Url..." class="input" /><br><br>
-            <select id="city" class="input">
+            <input type="text" id="title" placeholder="Title..." class="input"  required/><br><br>
+            <input type="number" id="Price" placeholder="Price..." class="input" required/><br><br>
+            <input type="url" id="img" placeholder="Url..." class="input" required/><br><br>
+            <select id="city" class="input" required>
                 <option>Surat</option>
                 <option>Ahamdabad</option>
                 <option>Mumbai</option>
