--- a/JAVASCRIPT/Food Final Exam/FOOD App/html/SignUp.html
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/html/SignUp.html
@@ -31,7 +31,7 @@
             <input type="text" id="name" placeholder="Enter Name" class="input" required /><br><br>
             <input type="email" id="email" placeholder="Enter Email" class="input" required /><br><br>
             <input type="url" id="img" placeholder="Enter Profile URL" class="input" required /><br><br>
-            <select id="city" class="input">
+            <select id="city" class="input" required>
                 <option>Surat</option>
                 <option>Ahamdabad</option>
                 <option>Mumbai</option>
